Some minor bug and layout fixes
I fixed some minor bug and layout fixes like my author information showing up on the right instead of the left.

--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,11 @@ body #title {
 	padding-right: 7vw;
 }
 
+#index-body #author-info {
+	justify-content: flex-end;
+	align-self: flex-start;
+}
+
 #contact-body {
 	display: grid;
 	margin-left: 8px;
